# emptytest

./: hello.py  pyproject.toml
src/: another_module.py  module.py
src/some_dir/: nested_module.py
