[project]
name = "uv-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "progressbar>=2.5",
    "psycopg2>=2.9.10",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.0.1",
    "selenium>=4.27.1",
    "sqlalchemy>=2.0.36",
    "tool>=0.8.0",
]

[tool.uv.workspace]
members = ["help"]
